continued adding html structure

--- a/ireland.html
+++ b/ireland.html
@@ -40,10 +40,36 @@
     <main>
         <img src="images/Cliffs-of-Moher-coast-County-Clare-Ireland.jpg" alt="Cliffs of Moher">
         <h1>Come visit Ireland!</h1>
+        <!-- Parent flex container for cities, landmarks, and citizens cards. -->
         <section class="content">
-            <div class="content__container cities"></div>
-            <div class="content__container landmarks"></div>
-            <div class="content__container citizens"></div>
+            <!-- Cities parent container -->
+            <div class="content__container cities">
+                <!-- cities cards -->
+                <div class="cities__card">
+                    <img class="cities__card-image" src="" alt="">
+                    <p class="cities__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur alias sunt, nulla iure error animi voluptas nemo, commodi non tempore delectus quisquam totam nobis? Facere voluptatum eum perspiciatis dolore voluptatem.</p>
+                </div>
+                <div class="cities__card">
+                    <img class="cities__card-image" src="" alt="">
+                    <p class="cities__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur alias sunt, nulla iure error animi voluptas nemo, commodi non tempore delectus quisquam totam nobis? Facere voluptatum eum perspiciatis dolore voluptatem.</p>
+                </div>
+                <div class="cities__card">
+                    <img class="cities__card-image" src="" alt="">
+                    <p class="cities__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur alias sunt, nulla iure error animi voluptas nemo, commodi non tempore delectus quisquam totam nobis? Facere voluptatum eum perspiciatis dolore voluptatem.</p>
+                </div>
+            </div>
+            <!-- Landmarks parent container -->
+            <div class="content__container landmarks">
+                <!-- landmarks cards -->
+                <div class="landmarks__card">
+                    <img class ="landmarks__card-image" src="" alt="">
+                    <p class="landmarks__card-text"></p>
+                </div>
+            <!-- Citizens parent container -->
+            </div>
+            <div class="content__container citizens">
+
+            </div>
         </section>
     </main>
     <footer>
