finished fleshin out html wireframe

--- a/ireland.html
+++ b/ireland.html
@@ -44,6 +44,7 @@
         <section class="content">
             <!-- Cities parent container -->
             <div class="content__container cities">
+                <h2>Cities</h2>
                 <!-- cities cards -->
                 <div class="cities__card">
                     <img class="cities__card-image" src="" alt="">
@@ -60,15 +61,36 @@
             </div>
             <!-- Landmarks parent container -->
             <div class="content__container landmarks">
+                <h2>Famous Landmarks</h2>
                 <!-- landmarks cards -->
                 <div class="landmarks__card">
                     <img class ="landmarks__card-image" src="" alt="">
-                    <p class="landmarks__card-text"></p>
+                    <p class="landmarks__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aliquam placeat perspiciatis dolorem neque amet officia quibusdam harum qui, culpa sapiente omnis hic porro veniam iure expedita deserunt itaque velit!</p>
                 </div>
-            <!-- Citizens parent container -->
+                <div class="landmarks__card">
+                    <img class ="landmarks__card-image" src="" alt="">
+                    <p class="landmarks__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aliquam placeat perspiciatis dolorem neque amet officia quibusdam harum qui, culpa sapiente omnis hic porro veniam iure expedita deserunt itaque velit!</p>
+                </div>
+                <div class="landmarks__card">
+                    <img class ="landmarks__card-image" src="" alt="">
+                    <p class="landmarks__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aliquam placeat perspiciatis dolorem neque amet officia quibusdam harum qui, culpa sapiente omnis hic porro veniam iure expedita deserunt itaque velit!</p>
+                </div>
             </div>
+            <!-- Citizens parent container -->
             <div class="content__container citizens">
-
+                <h2>Famous Citizens</h2>
+                <div class="citizens__Card">
+                    <img class ="citizens__card-image" src="" alt="">
+                    <p class="citizens__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aliquam placeat perspiciatis dolorem neque amet officia quibusdam harum qui, culpa sapiente omnis hic porro veniam iure expedita deserunt itaque velit!</p>
+                </div>
+                <div class="citizens__Card">
+                    <img class ="citizens__card-image" src="" alt="">
+                    <p class="citizens__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aliquam placeat perspiciatis dolorem neque amet officia quibusdam harum qui, culpa sapiente omnis hic porro veniam iure expedita deserunt itaque velit!</p>
+                </div>
+                <div class="citizens__Card">
+                    <img class ="citizens__card-image" src="" alt="">
+                    <p class="citizens__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aliquam placeat perspiciatis dolorem neque amet officia quibusdam harum qui, culpa sapiente omnis hic porro veniam iure expedita deserunt itaque velit!</p>
+                </div>
             </div>
         </section>
     </main>
