Added all images for ireland page

--- a/ireland.html
+++ b/ireland.html
@@ -38,7 +38,7 @@
         </nav>
     </header>
     <main>
-        <img src="images/Cliffs-of-Moher-coast-County-Clare-Ireland.jpg" alt="Cliffs of Moher">
+        <img src="images/cliffsofmoher.jpg" alt="Cliffs of Moher">
         <h1>Come visit Ireland!</h1>
         <!-- Parent flex container for cities, landmarks, and citizens cards. -->
         <section class="content">
