linked images in appropriat spots for cities and landmarks

--- a/ireland.html
+++ b/ireland.html
@@ -47,15 +47,18 @@
                 <h2>Cities</h2>
                 <!-- cities cards -->
                 <div class="cities__card">
-                    <img class="cities__card-image" src="" alt="">
+                    <h3>Dublin</h3>
+                    <img class="cities__card-image" src="/images/dublin-ireland-map.jpg" alt="">
                     <p class="cities__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur alias sunt, nulla iure error animi voluptas nemo, commodi non tempore delectus quisquam totam nobis? Facere voluptatum eum perspiciatis dolore voluptatem.</p>
                 </div>
                 <div class="cities__card">
-                    <img class="cities__card-image" src="" alt="">
+                    <h3>Cork</h3>
+                    <img class="cities__card-image" src="/images/cork-ireland-map.jpg" alt="">
                     <p class="cities__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur alias sunt, nulla iure error animi voluptas nemo, commodi non tempore delectus quisquam totam nobis? Facere voluptatum eum perspiciatis dolore voluptatem.</p>
                 </div>
                 <div class="cities__card">
-                    <img class="cities__card-image" src="" alt="">
+                    <h3>Waterford</h3>
+                    <img class="cities__card-image" src="/images/waterford-ireland-map.jpg" alt="">
                     <p class="cities__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur alias sunt, nulla iure error animi voluptas nemo, commodi non tempore delectus quisquam totam nobis? Facere voluptatum eum perspiciatis dolore voluptatem.</p>
                 </div>
             </div>
@@ -64,15 +67,18 @@
                 <h2>Famous Landmarks</h2>
                 <!-- landmarks cards -->
                 <div class="landmarks__card">
-                    <img class ="landmarks__card-image" src="" alt="">
+                    <h3>Cliffs of Moher</h3>
+                    <img class ="landmarks__card-image" src="/images/cliffsofmoher2.jpg" alt="">
                     <p class="landmarks__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aliquam placeat perspiciatis dolorem neque amet officia quibusdam harum qui, culpa sapiente omnis hic porro veniam iure expedita deserunt itaque velit!</p>
                 </div>
                 <div class="landmarks__card">
-                    <img class ="landmarks__card-image" src="" alt="">
+                    <h3>Giant's Causeway</h3>
+                    <img class ="landmarks__card-image" src="/images/giantscauseway.jpg" alt="">
                     <p class="landmarks__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aliquam placeat perspiciatis dolorem neque amet officia quibusdam harum qui, culpa sapiente omnis hic porro veniam iure expedita deserunt itaque velit!</p>
                 </div>
                 <div class="landmarks__card">
-                    <img class ="landmarks__card-image" src="" alt="">
+                    <h3>The Old Library of Trinity College</h3>
+                    <img class ="landmarks__card-image" src="/images/oldlibrary.jpg" alt="">
                     <p class="landmarks__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aliquam placeat perspiciatis dolorem neque amet officia quibusdam harum qui, culpa sapiente omnis hic porro veniam iure expedita deserunt itaque velit!</p>
                 </div>
             </div>
