linked photos for famous citizens

--- a/ireland.html
+++ b/ireland.html
@@ -86,15 +86,18 @@
             <div class="content__container citizens">
                 <h2>Famous Citizens</h2>
                 <div class="citizens__Card">
-                    <img class ="citizens__card-image" src="" alt="">
+                    <h3>Bono</h3>
+                    <img class ="citizens__card-image" src="/images/bono.jpeg" alt="">
                     <p class="citizens__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aliquam placeat perspiciatis dolorem neque amet officia quibusdam harum qui, culpa sapiente omnis hic porro veniam iure expedita deserunt itaque velit!</p>
                 </div>
                 <div class="citizens__Card">
-                    <img class ="citizens__card-image" src="" alt="">
+                    <h3>Saint Patrick</h3>
+                    <img class ="citizens__card-image" src="/images/saint-patrick-snakes.jpg" alt="">
                     <p class="citizens__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aliquam placeat perspiciatis dolorem neque amet officia quibusdam harum qui, culpa sapiente omnis hic porro veniam iure expedita deserunt itaque velit!</p>
                 </div>
                 <div class="citizens__Card">
-                    <img class ="citizens__card-image" src="" alt="">
+                    <h3>Liam Neeson</h3>
+                    <img class ="citizens__card-image" src="/images/liam-neeson.jpg" alt="">
                     <p class="citizens__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aliquam placeat perspiciatis dolorem neque amet officia quibusdam harum qui, culpa sapiente omnis hic porro veniam iure expedita deserunt itaque velit!</p>
                 </div>
             </div>
