--- a/ireland.html
+++ b/ireland.html
@@ -17,11 +17,12 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
+            
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="ireland.html">Ireland</a>
                     </li>
                     <li class="nav-item">
@@ -38,7 +39,7 @@
         </nav>
     </header>
     <main>
-        <img src="images/Cliffs-of-Moher-coast-County-Clare-Ireland.jpg" alt="Cliffs of Moher">
+        <img class ="country__image" src="images/Cliffs-of-Moher-coast-County-Clare-Ireland.jpg" alt="Cliffs of Moher">
         <h1>Come visit Ireland!</h1>
         <!-- Parent flex container for cities, landmarks, and citizens cards. -->
         <section class="content">
