added media query for responsive flex

--- a/ireland.html
+++ b/ireland.html
@@ -45,7 +45,7 @@
         <section class="content">
             <!-- Cities parent container -->
             <div class="content__container cities">
-                <h2>Cities</h2>
+                <h2>Notable Cities</h2>
                 <!-- cities cards -->
                 <div class="cities__card">
                     <img class="cities__card-image" src="" alt="">
