added content to the south-korea page

--- a/south-korea.html
+++ b/south-korea.html
@@ -37,7 +37,7 @@
           </nav>
     </header>
     <main>
-      <img class= "country__image" src="" alt="country img">
+      <img class= "country__image" src="images/south korea .webp" alt="country img">
       <h1>Come visit South Korea</h1>
 
 
@@ -54,37 +54,37 @@
           <div class="cities content__container">
             <h2>Cities</h2>
             <div class="cities__card">
-              <img class= "cities__card-image" src="" alt="city__img">
+              <img class= "cities__card-image" src="images/seoul.jpg" alt="city__img">
               <p class="cities__card-text">seol</p>
             </div>
             <div class="cities__card">
-              <img class= "cities__card-image" src="" alt="city__img">
-              <p class="cities__card-text">seol</p>
+              <img class= "cities__card-image" src="images/seomyeon.jpeg" alt="city__img">
+              <p class="cities__card-text">seomyeon</p>
             </div><div class="cities__card">
-              <img class= "cities__card-image" src="" alt="city__img">
-              <p class="cities__card-text">seol</p>
+              <img class= "cities__card-image" src="images/busancity.jpg" alt="city__img">
+              <p class="cities__card-text">busan</p>
             </div>
           </div>
 
 
-
+ 
 
 
 <!-- landmarks -->
 
 
           <div class="landmarks content__container">
-            <h3>Landmarks</h3>
+            <h2>Landmarks</h2>
             <div class="landmarks__card">
-              <img class="landmarks__card-image" src="" alt="landmark image">
-              <p class="landmarks__card-text"></p>
+              <img class="landmarks__card-image" src="images/Chang Palace.jpg" alt="landmark image">
+              <p class="landmarks__card-text">Changdeokgung Palace</p>
             </div>
             <div class="landmarks__card">
-              <img class="landmarks__card-image" src="" alt="landmark image">
-              <p class="landmarks__card-text"></p>
+              <img class="landmarks__card-image" src="images/BUSAN.jpg" alt="landmark image">
+              <p class="landmarks__card-text">Busan</p>
             </div><div class="landmarks__card">
-              <img class="landmarks__card-image" src="" alt="landmark image">
-              <p class="landmarks__card-text"></p>
+              <img class="landmarks__card-image" src="images/JEONJU.jpg" alt="landmark image">
+              <p class="landmarks__card-text">Jeonju</p>
             </div>
           </div>
 
@@ -93,17 +93,17 @@
 <!-- Citizens -->
 
           <div class="citizens content__container">
-            <h4>Citizens</h4>
+            <h2>Citizens</h2>
             <div class="citizens__card">
-              <img class="citizens__card-image" src="" alt="citizens image">
-              <p class="citizens__card-text"></p>
+              <img class="citizens__card-image" src="images/BlackPink.jpg" alt="citizens image">
+              <p class="citizens__card-text">Black Pink</p>
             </div>
             <div class="citizens__card">
-              <img class="citizens__card-image" src="" alt="citizens image">
-              <p class="citizens__card-text"></p>
+              <img class="citizens__card-image" src="images/BTS.jpg" alt="citizens image">
+              <p class="citizens__card-text">BTS</p>
             </div><div class="citizens__card">
-              <img class="citizens__card-image" src="" alt="citizens image">
-              <p class="citizens__card-text"></p>
+              <img class="citizens__card-image" src="images/WANNAONE.jpg" alt="citizens image">
+              <p class="citizens__card-text">Wannaone</p>
             </div>
           </div>
     </section>
