added fix for merge conflict on the ireland photos and some css

--- a/ireland.html
+++ b/ireland.html
@@ -39,7 +39,7 @@
         </nav>
     </header>
     <main>
-        <img class ="country__image" src="images/Cliffs-of-Moher-coast-County-Clare-Ireland.jpg" alt="Cliffs of Moher">
+        <img class ="country__image" src="images/cliffsofmoher.jpg" alt="Cliffs of Moher">
         <h1>Come Visit Ireland!</h1>
         <!-- Parent flex container for cities, landmarks, and citizens cards. -->
         <section class="content">
@@ -48,15 +48,15 @@
                 <h2>Notable Cities</h2>
                 <!-- cities cards -->
                 <div class="cities__card">
-                    <img class="cities__card-image" src="" alt="">
+                    <img class="cities__card-image" src="/images/dublin-ireland-map.jpg" alt="">
                     <p class="cities__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur alias sunt, nulla iure error animi voluptas nemo, commodi non tempore delectus quisquam totam nobis? Facere voluptatum eum perspiciatis dolore voluptatem.</p>
                 </div>
                 <div class="cities__card">
-                    <img class="cities__card-image" src="" alt="">
+                    <img class="cities__card-image" src="/images/waterford-ireland-map.jpg" alt="">
                     <p class="cities__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur alias sunt, nulla iure error animi voluptas nemo, commodi non tempore delectus quisquam totam nobis? Facere voluptatum eum perspiciatis dolore voluptatem.</p>
                 </div>
                 <div class="cities__card">
-                    <img class="cities__card-image" src="" alt="">
+                    <img class="cities__card-image" src="/images/cork-ireland-map.jpg" alt="">
                     <p class="cities__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur alias sunt, nulla iure error animi voluptas nemo, commodi non tempore delectus quisquam totam nobis? Facere voluptatum eum perspiciatis dolore voluptatem.</p>
                 </div>
             </div>
@@ -65,15 +65,15 @@
                 <h2>Famous Landmarks</h2>
                 <!-- landmarks cards -->
                 <div class="landmarks__card">
-                    <img class ="landmarks__card-image" src="" alt="">
+                    <img class ="landmarks__card-image" src="/images/giantscauseway.jpg" alt="">
                     <p class="landmarks__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aliquam placeat perspiciatis dolorem neque amet officia quibusdam harum qui, culpa sapiente omnis hic porro veniam iure expedita deserunt itaque velit!</p>
                 </div>
                 <div class="landmarks__card">
-                    <img class ="landmarks__card-image" src="" alt="">
+                    <img class ="landmarks__card-image" src="/images/oldlibrary.jpg" alt="">
                     <p class="landmarks__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aliquam placeat perspiciatis dolorem neque amet officia quibusdam harum qui, culpa sapiente omnis hic porro veniam iure expedita deserunt itaque velit!</p>
                 </div>
                 <div class="landmarks__card">
-                    <img class ="landmarks__card-image" src="" alt="">
+                    <img class ="landmarks__card-image" src="/images/cliffsofmoher2.jpg" alt="">
                     <p class="landmarks__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aliquam placeat perspiciatis dolorem neque amet officia quibusdam harum qui, culpa sapiente omnis hic porro veniam iure expedita deserunt itaque velit!</p>
                 </div>
             </div>
@@ -81,15 +81,15 @@
             <div class="content__container citizens">
                 <h2>Famous Citizens</h2>
                 <div class="citizens__Card">
-                    <img class ="citizens__card-image" src="" alt="">
+                    <img class ="citizens__card-image" src="/images/bono.jpeg" alt="">
                     <p class="citizens__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aliquam placeat perspiciatis dolorem neque amet officia quibusdam harum qui, culpa sapiente omnis hic porro veniam iure expedita deserunt itaque velit!</p>
                 </div>
                 <div class="citizens__Card">
-                    <img class ="citizens__card-image" src="" alt="">
+                    <img class ="citizens__card-image" src="/images/saint-patrick-snakes.jpg" alt="">
                     <p class="citizens__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aliquam placeat perspiciatis dolorem neque amet officia quibusdam harum qui, culpa sapiente omnis hic porro veniam iure expedita deserunt itaque velit!</p>
                 </div>
                 <div class="citizens__Card">
-                    <img class ="citizens__card-image" src="" alt="">
+                    <img class ="citizens__card-image" src="/images/liam-neeson.jpg" alt="">
                     <p class="citizens__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aliquam placeat perspiciatis dolorem neque amet officia quibusdam harum qui, culpa sapiente omnis hic porro veniam iure expedita deserunt itaque velit!</p>
                 </div>
             </div>
