some last minute css tweaks

--- a/ireland.html
+++ b/ireland.html
@@ -96,7 +96,8 @@
         </section>
     </main>
     <footer>
-
+        <p>Copyright Mumbles 2021</p>
+        <a href="https://github.com/nss-day-cohort-46/hello-world-mumbles">Checkout our Project on Github</a>
     </footer>
 </body>
 </html>
