Added images and basic CSS

--- a/france.html
+++ b/france.html
@@ -39,7 +39,7 @@
     </header>
 
     <main>
-      <img src="country__image" alt="">
+      <img src="images/france-header.jpg" alt="Photo of Paris">
       <h1>France</h1>
       <section class="container__content">
 
@@ -47,15 +47,15 @@
         <div class="cities__content__container">
           <h3>Cities</h3>
           <div class="cities__card">
-            <img src="cities__card-image" alt="">
+            <img class="citites__card-image" src="images/paris.jpg" alt="Paris">
             <p class="cities__card-text"></p>
           </div>
           <div class="cities__card">
-            <img src="cities__card-image" alt="">
+            <img class="citites__card-image" src="images/nice.jpg" alt="Nice">
             <p class="cities__card-text"></p>
           </div>
           <div class="cities__card">
-            <img src="cities__card-image" alt="">
+            <img class="citites__card-image" src="images/marseilles.jpg" alt="Marseilles">
             <p class="cities__card-text"></p>
           </div>
         </div>
@@ -65,15 +65,15 @@
         <div class="landmarks__content__container">
           <h3>Landmarks</h3>
           <div class="landmarks__card">
-            <img class="landmarks__card-image" src="" alt="">
+            <img class="landmarks__card-image" src="images/louvre.jpg" alt="Louvre">
             <p class="landmarks__card-text"></p>
           </div>
           <div class="landmarks__card">
-            <img class="landmarks__card-image" src="" alt="">
+            <img class="landmarks__card-image" src="images/catacombs.jpg" alt="Paris Catacombs">
             <p class="landmarks__card-text"></p>
           </div>
           <div class="landmarks__card">
-            <img class="landmarks__card-image" src="" alt="">
+            <img class="landmarks__card-image" src="images/pont-davignon.jpg" alt="Pont d-Avignon">
             <p class="landmarks__card-text"></p>
           </div>
         </div>
@@ -83,15 +83,15 @@
         <div class="citizens__content__container">
           <h3>Famous Citizens</h3>
           <div class="citizens__card">
-            <img class="citizens__card-image" src="" alt="">
+            <img class="citizens__card-image" src="images/carla-b.jpg" alt="Carla Bruni">
             <p class="citizens__card-text"></p>
           </div>
           <div class="citizens__card">
-            <img class="citizens__card-image" src="" alt="">
+            <img class="citizens__card-image" src="images/godard.jpg" alt="Jean Luc Godard">
             <p class="cities__card-text"></p>
           </div>
           <div class="citizens__card">
-            <img class="citizens__card-image" src="" alt="">
+            <img class="citizens__card-image" src="images/catherine-d.jpg" alt="Catherine Deneuve">
             <p class="citizens__card-text"></p>
           </div>
   </div>
