updates to html and css

--- a/ghana.html
+++ b/ghana.html
@@ -60,7 +60,7 @@
                     <p class="cities__card-text">Kumasi is the capital city of the Ashanti Region, in southern Ghana. It’s known as a center for Ashanti culture. In the huge, open-air Kejetia Market, stalls sell everything from glass beads to Ashanti sandals. The National Cultural Centre offers craft workshops and dance performances. It includes the Prempeh II Jubilee Museum, which displays jewelry and ceremonial clothing belonging to the 20th-century Ashanti king</p>
                 </div>
             </div>
-            <!-- landmarkd -->
+            <!-- landmarks -->
             <h2>Landmarks</h2>
             <div class="landmark__content-container">
                 <div class="landmark__card">Kwame Nkrumah Memorial Park & Mausoleum
