--- a/south-korea.html
+++ b/south-korea.html
@@ -39,58 +39,17 @@
     <main>
       <img class= "country__image" src="images/south korea .webp" alt="country img">
       <h1>Come visit South Korea</h1>
-
-
-
         <section class="content"> 
-
-
-
-
 
       <!-- cities -->
 
+          <div class="cities content__container"></div>
 
-          <div class="cities content__container">
-            <h2>Cities</h2>
-            <div class="cities__card">
-              <img class= "cities__card-image" src="images/seoul.jpg" alt="city__img">
-              <p class="cities__card-text">seol</p>
-            </div>
-            <div class="cities__card">
-              <img class= "cities__card-image" src="images/seomyeon.jpeg" alt="city__img">
-              <p class="cities__card-text">seomyeon</p>
-            </div><div class="cities__card">
-              <img class= "cities__card-image" src="images/busancity.jpg" alt="city__img">
-              <p class="cities__card-text">busan</p>
-            </div>
-          </div>
+      <!-- landmarks -->
 
+          <div class="landmarks content__container"></div>
 
- 
-
-
-<!-- landmarks -->
-
-
-          <div class="landmarks content__container">
-            <h2>Landmarks</h2>
-            <div class="landmarks__card">
-              <img class="landmarks__card-image" src="images/Chang Palace.jpg" alt="landmark image">
-              <p class="landmarks__card-text">Changdeokgung Palace</p>
-            </div>
-            <div class="landmarks__card">
-              <img class="landmarks__card-image" src="images/BUSAN.jpg" alt="landmark image">
-              <p class="landmarks__card-text">Busan</p>
-            </div><div class="landmarks__card">
-              <img class="landmarks__card-image" src="images/JEONJU.jpg" alt="landmark image">
-              <p class="landmarks__card-text">Jeonju</p>
-            </div>
-          </div>
-
-        
-
-<!-- Citizens -->
+      <!-- Citizens -->
 
           <div class="citizens content__container">
             <h2>Citizens</h2>
