--- a/south-korea.html
+++ b/south-korea.html
@@ -51,25 +51,14 @@
 
       <!-- Citizens -->
 
-          <div class="citizens content__container">
-            <h2>Citizens</h2>
-            <div class="citizens__card">
-              <img class="citizens__card-image" src="images/BlackPink.jpg" alt="citizens image">
-              <p class="citizens__card-text">Black Pink</p>
-            </div>
-            <div class="citizens__card">
-              <img class="citizens__card-image" src="images/BTS.jpg" alt="citizens image">
-              <p class="citizens__card-text">BTS</p>
-            </div><div class="citizens__card">
-              <img class="citizens__card-image" src="images/WANNAONE.jpg" alt="citizens image">
-              <p class="citizens__card-text">Wannaone</p>
-            </div>
-          </div>
-    </section>
+          <div class="citizens content__container"></div>
+      </section>
+
   </main>
   <footer>
     <p class="Copyright"></p>
     <a href="https://github.com/nss-day-cohort-46/hello-world-mumbles">Checkout our github</a>
   </footer>
+  <script type="module" src="scripts/southkorea/main.js"></script>
 </body>
 </html>
