--- a/ireland.html
+++ b/ireland.html
@@ -99,5 +99,6 @@
         <p>Copyright Mumbles 2021</p>
         <a href="https://github.com/nss-day-cohort-46/hello-world-mumbles">Checkout our Project on Github</a>
     </footer>
+    <script type="module" src="scripts/ireland/main.js"></script>
 </body>
 </html>
