Added to DataProvider.js for France

--- a/france.html
+++ b/france.html
@@ -48,15 +48,15 @@
           <h3>Cities</h3>
           <div class="cities__card">
             <img class="citites__card-image" src="images/paris.jpg" alt="Paris">
-            <p class="cities__card-text"></p>
+            <p class="cities__card-text">Paris is the capitol of France.</p>
           </div>
           <div class="cities__card">
             <img class="citites__card-image" src="images/nice.jpg" alt="Nice">
-            <p class="cities__card-text"></p>
+            <p class="cities__card-text">Nice, capital of the Alpes-Maritimes department on the French Riviera, sits on the pebbly shores of the Baie des Anges.</p>
           </div>
           <div class="cities__card">
             <img class="citites__card-image" src="images/marseilles.jpg" alt="Marseilles">
-            <p class="cities__card-text"></p>
+            <p class="cities__card-text">Marseille is a port city in southern France.</p>
           </div>
         </div>
 
@@ -66,15 +66,15 @@
           <h3>Landmarks</h3>
           <div class="landmarks__card">
             <img class="landmarks__card-image" src="images/louvre.jpg" alt="Louvre">
-            <p class="landmarks__card-text"></p>
+            <p class="landmarks__card-text">The Louvre, or the Louvre Museum, is the world's largest art museum and a historic monument in Paris, France.</p>
           </div>
           <div class="landmarks__card">
             <img class="landmarks__card-image" src="images/catacombs.jpg" alt="Paris Catacombs">
-            <p class="landmarks__card-text"></p>
+            <p class="landmarks__card-text">The Catacombs of Paris are underground ossuaries in Paris, France, which hold the remains of more than six million people in a small part of a tunnel network built to consolidate Paris' ancient stone quarries.</p>
           </div>
           <div class="landmarks__card">
             <img class="landmarks__card-image" src="images/pont-davignon.jpg" alt="Pont d-Avignon">
-            <p class="landmarks__card-text"></p>
+            <p class="landmarks__card-text">The Pont Saint-Bénézet, also known as the Pont d'Avignon, is a famous medieval bridge in the town of Avignon, in southern France.</p>
           </div>
         </div>
 
@@ -84,20 +84,20 @@
           <h3>Famous Citizens</h3>
           <div class="citizens__card">
             <img class="citizens__card-image" src="images/carla-b.jpg" alt="Carla Bruni">
-            <p class="citizens__card-text"></p>
+            <p class="citizens__card-text">Carla Bruni Sarkozy is an Italian-French singer-songwriter and fashion model. In 2008, she married Nicolas Sarkozy, then president of France.</p>
           </div>
           <div class="citizens__card">
             <img class="citizens__card-image" src="images/godard.jpg" alt="Jean Luc Godard">
-            <p class="cities__card-text"></p>
+            <p class="cities__card-text">Jean-Luc Godard is a French-Swiss film director, screenwriter and film critic. He rose to prominence as a pioneer of the 1960s French New Wave film movement, and is arguably the most influential French filmmaker of the post-war era. </p>
           </div>
           <div class="citizens__card">
             <img class="citizens__card-image" src="images/catherine-d.jpg" alt="Catherine Deneuve">
-            <p class="citizens__card-text"></p>
+            <p class="citizens__card-text">Catherine Deneuve is a French actress as well as an occasional singer, model and producer, considered one of the greatest European actresses.</p>
           </div>
   </div>
 
       </section>
     </main>
-</body>
-
+    <script type="module" src="scripts/france/main.js"></script>
+</body> 
 </html>
