--- a/ghana.html
+++ b/ghana.html
@@ -99,5 +99,6 @@
     <footer>
         <p>© 2021 Mumbles Yasmeen Cole</p>
     </footer>
+    <script type="module" src="scripts/ghana/main.js"></script>
 </body>
 </html>
