--- a/ireland.html
+++ b/ireland.html
@@ -45,9 +45,9 @@
         <section class="content">
             <!-- Cities parent container -->
             <div class="content__container cities">
-                <h2>Notable Cities</h2>
+                <!-- <h2>Notable Cities</h2> -->
                 <!-- cities cards -->
-                <div class="cities__card">
+                <!-- <div class="cities__card">
                     <img class="cities__card-image" src="/images/dublin-ireland-map.jpg" alt="">
                     <p class="cities__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur alias sunt, nulla iure error animi voluptas nemo, commodi non tempore delectus quisquam totam nobis? Facere voluptatum eum perspiciatis dolore voluptatem.</p>
                 </div>
@@ -58,13 +58,13 @@
                 <div class="cities__card">
                     <img class="cities__card-image" src="/images/cork-ireland-map.jpg" alt="">
                     <p class="cities__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur alias sunt, nulla iure error animi voluptas nemo, commodi non tempore delectus quisquam totam nobis? Facere voluptatum eum perspiciatis dolore voluptatem.</p>
-                </div>
+                </div> -->
             </div>
             <!-- Landmarks parent container -->
             <div class="content__container landmarks">
-                <h2>Famous Landmarks</h2>
+                <!-- <h2>Famous Landmarks</h2> -->
                 <!-- landmarks cards -->
-                <div class="landmarks__card">
+                <!-- <div class="landmarks__card">
                     <img class ="landmarks__card-image" src="/images/giantscauseway.jpg" alt="">
                     <p class="landmarks__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aliquam placeat perspiciatis dolorem neque amet officia quibusdam harum qui, culpa sapiente omnis hic porro veniam iure expedita deserunt itaque velit!</p>
                 </div>
@@ -75,12 +75,12 @@
                 <div class="landmarks__card">
                     <img class ="landmarks__card-image" src="/images/cliffsofmoher2.jpg" alt="">
                     <p class="landmarks__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aliquam placeat perspiciatis dolorem neque amet officia quibusdam harum qui, culpa sapiente omnis hic porro veniam iure expedita deserunt itaque velit!</p>
-                </div>
+                </div> -->
             </div>
             <!-- Citizens parent container -->
             <div class="content__container citizens">
-                <h2>Famous Citizens</h2>
-                <div class="citizens__Card">
+                <!-- <h2>Famous Citizens</h2> -->
+                <!-- <div class="citizens__Card">
                     <img class ="citizens__card-image" src="/images/bono.jpeg" alt="">
                     <p class="citizens__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aliquam placeat perspiciatis dolorem neque amet officia quibusdam harum qui, culpa sapiente omnis hic porro veniam iure expedita deserunt itaque velit!</p>
                 </div>
@@ -91,7 +91,7 @@
                 <div class="citizens__Card">
                     <img class ="citizens__card-image" src="/images/liam-neeson.jpg" alt="">
                     <p class="citizens__card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione aliquam placeat perspiciatis dolorem neque amet officia quibusdam harum qui, culpa sapiente omnis hic porro veniam iure expedita deserunt itaque velit!</p>
-                </div>
+                </div> -->
             </div>
         </section>
     </main>
