--- a/ireland.html
+++ b/ireland.html
@@ -44,7 +44,7 @@
         <!-- Parent flex container for cities, landmarks, and citizens cards. -->
         <section class="content">
             <!-- Cities parent container -->
-            <div class="content__container cities">
+            <div class="content__container cities__wrapper">
                 <!-- <h2>Notable Cities</h2> -->
                 <!-- cities cards -->
                 <!-- <div class="cities__card">
