--- a/ireland.html
+++ b/ireland.html
@@ -61,7 +61,7 @@
                 </div> -->
             </div>
             <!-- Landmarks parent container -->
-            <div class="content__container landmarks">
+            <div class="content__container landmarks__wrapper">
                 <!-- <h2>Famous Landmarks</h2> -->
                 <!-- landmarks cards -->
                 <!-- <div class="landmarks__card">
@@ -78,7 +78,7 @@
                 </div> -->
             </div>
             <!-- Citizens parent container -->
-            <div class="content__container citizens">
+            <div class="content__container citizens__wrapper">
                 <!-- <h2>Famous Citizens</h2> -->
                 <!-- <div class="citizens__Card">
                     <img class ="citizens__card-image" src="/images/bono.jpeg" alt="">
