Exported LandmarkList.js

--- a/france.html
+++ b/france.html
@@ -64,7 +64,7 @@
     
         <div class="landmarks__content__container">
           <h3>Landmarks</h3>
-          <div class="landmarks__card">
+          <!--<div class="landmarks__card">
             <img class="landmarks__card-image" src="images/louvre.jpg" alt="Louvre">
             <p class="landmarks__card-text">The Louvre, or the Louvre Museum, is the world's largest art museum and a historic monument in Paris, France.</p>
           </div>
@@ -75,7 +75,7 @@
           <div class="landmarks__card">
             <img class="landmarks__card-image" src="images/pont-davignon.jpg" alt="Pont d-Avignon">
             <p class="landmarks__card-text">The Pont Saint-Bénézet, also known as the Pont d'Avignon, is a famous medieval bridge in the town of Avignon, in southern France.</p>
-          </div>
+          </div> -->
         </div>
 
         <!-- Citizens-->
