Edited flex of France CSS, added specific France page classes, new better resolution header image

--- a/france.html
+++ b/france.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 
-<body>
+<body class="france_body">
     <header>
         <img class="logo__image" src="" alt="">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -39,12 +39,12 @@
     </header>
 
     <main>
-      <img src="images/france-header.jpg" alt="Photo of Paris">
-      <h1>France</h1>
-      <section class="container__content">
+      <img class="france_header__img" src="images/france-header.jpg" alt="Photo of Paris">
+      <h1 class= "france_title">France</h1>
+      <section class="france_container__content">
 
         <!-- Cities--> 
-        <div class="cities__content__container cities">
+        <div class="cities__content__container french_cities">
           <h3>Cities</h3>
           <!-- <div class="cities__card">
             <img class="citites__card-image" src="images/paris.jpg" alt="Paris">
@@ -62,7 +62,7 @@
 
         <!-- Landmarks-->
     
-        <div class="landmarks__content__container landmarks">
+        <div class="landmarks__content__container french_landmarks">
           <h3>Landmarks</h3>
           <!-- <div class="landmarks__card">
             <img class="landmarks__card-image" src="images/louvre.jpg" alt="Louvre">
@@ -80,7 +80,7 @@
 
         <!-- Citizens-->
 
-        <div class="citizens__content__container citizens">
+        <div class="citizens__content__container french_citizens">
           <h3>Famous Citizens</h3>
           <!-- <div class="citizens__card">
             <img class="citizens__card-image" src="images/carla-b.jpg" alt="Carla Bruni">
