--- a/france.html
+++ b/france.html
@@ -98,6 +98,10 @@
 
       </section>
     </main>
+<footer>
+  <p>Copyright Mumbles 2021</p>
+  <a href="https://github.com/nss-day-cohort-46/hello-world-mumbles">Checkout our Project on Github</a>
+</footer>
     <script type="module" src="scripts/france/main.js"></script>
 </body> 
 </html>
